[gd_scene load_steps=3 format=3 uid="uid://bqwxaokmxupn"]

[ext_resource type="Script" path="res://game/weapons/weapon_type/ranged/ranged_weapon_base.gd" id="1_k0ig1"]
[ext_resource type="Texture2D" uid="uid://dnywnltyudngn" path="res://game/weapons/01_shotgun/shotgun.png" id="2_ngsda"]

[node name="RangedWeaponBase" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_k0ig1")

[node name="BurstTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
max_polyphony = 10
bus = &"Effects"

[node name="Crosshair" type="Sprite2D" parent="."]
top_level = true

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(50, 0)
texture = ExtResource("2_ngsda")

[node name="BulletSpawnPosition" type="Marker2D" parent="."]
position = Vector2(78, 0)

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
